<resources>
    <string name="app_name">Carros</string>
    <string name="action_settings">Ver carros</string>

    <!-- Strings da Aplicação -->
    <string name="nome">Carro</string>
    <string name="marca">Fabricante</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cadastro_sucesso">Carro salvo com sucesso.</string>
    <string name="cadastro_erro">Alguma coisa que não está certo deu errado! :-)</string>
    <string name="title_activity_lista_carros">Lista de Carros</string>
    <string name="listar_carros">Lista carros</string>
    <string name="zero_registro">Nenhum registro encontrado.</string>
    <string name="titulo_alert">Pergunta</string>
    <string name="menssagem_alert">O que deseja fazer?</string>
    <string name="opcao_delete">Deletar</string>
    <string name="opcao_editar">Editar</string>
    <string name="title_activity_atualizar_carro">Atualizar Carro</string>
    <string name="atualizar">Atualizar</string>
    <string name="sucesso_atualizar_carro">Carro atualizado com sucesso!</string>
    <string name="erro_atualizar_carro">Carro não pode ser atualizado!</string>
    <string name="tipo_carro">Tipo de carro</string>
    <string name="sedan">Sedan</string>
    <string name="hatch">Hatch</string>
</resources>
