<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome" />
    <EditText
        android:id="@+id/edtNomeCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/marca"/>
    <EditText
        android:id="@+id/edtMarcaCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo_carro"/>
    <RadioGroup
        android:id="@+id/rgTipoCarro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rbSedan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sedan"/>
        <RadioButton
            android:id="@+id/rbHatch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hatch"/>
    </RadioGroup>
    <Button
        android:id="@+id/btnCadastrarCarro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"/>
</LinearLayout>
